[gd_scene load_steps=7 format=3 uid="uid://dhoterx8666un"]

[ext_resource type="Script" uid="uid://dmesg5s1c2x1r" path="res://menu/menu.gd" id="1_g18jx"]
[ext_resource type="Theme" uid="uid://bivdkhg44272e" path="res://menu/menu.tres" id="1_juveg"]
[ext_resource type="FontFile" uid="uid://dtjovo0usb3x3" path="res://other/system.fnt" id="2_6nwqt"]
[ext_resource type="Texture2D" uid="uid://b1ywcahoifejc" path="res://img/bodies/player/Oguzok.png" id="3_svuvw"]
[ext_resource type="Texture2D" uid="uid://c7c58t4q71tb3" path="res://img/items/plate.png" id="4_juveg"]
[ext_resource type="Texture2D" uid="uid://plrtkak22uau" path="res://img/items/spaghetti_ready.png" id="5_v6yed"]

[node name="Menu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_juveg")
script = ExtResource("1_g18jx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6nwqt")
theme_override_font_sizes/font_size = 128
text = "Root n' Shoot Diner"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginScore" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 128

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginScore"]
visible = false
layout_mode = 2

[node name="Total" type="Label" parent="HBoxContainer/VBoxContainer/MarginScore/VBoxContainer"]
layout_mode = 2
text = "Total Score: empty"

[node name="Max" type="Label" parent="HBoxContainer/VBoxContainer/MarginScore/VBoxContainer"]
layout_mode = 2
text = "Max Score: empty"

[node name="Margin" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Margin"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="HBoxContainer/VBoxContainer/Margin/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="HBoxContainer/VBoxContainer/Margin/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="Quit" type="Button" parent="HBoxContainer/VBoxContainer/Margin/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Oguzok" type="Sprite2D" parent="HBoxContainer/MarginContainer"]
position = Vector2(603, 367.00003)
scale = Vector2(26, 26)
texture = ExtResource("3_svuvw")
flip_h = true

[node name="Plate" type="Sprite2D" parent="HBoxContainer/MarginContainer"]
position = Vector2(455, 795.00006)
scale = Vector2(26, 26)
texture = ExtResource("4_juveg")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="SpaghettiReady" type="Sprite2D" parent="HBoxContainer/MarginContainer/Plate"]
texture = ExtResource("5_v6yed")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Margin/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Margin/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Margin/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
